--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello World!"
-
+  access_repo:
+    runs-on: ubuntu-latest
+    steps:
+      - run: python hello.py
 
 # jobs:
 #   build-linux:
