--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,8 @@ jobs:
   access_repo:
     runs-on: ubuntu-latest
     steps:
-
+      - uses: actions/checkout@v3
+      
       - uses: actions/setup-python@v2.2.1
         with:
             python-version: 3.8
