--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello World!"
-  access_repo:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
