add github workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
 
       - run: echo `python hello.py`
 
+      - run: echo "Next step"
+
 # jobs:
 #   build-linux:
 #     runs-on: ubuntu-latest
