--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,11 @@ jobs:
       - uses: actions/setup-python@v2.2.1
         with:
             python-version: 3.8
+      - name: install-dependencies
+        run: pip install -r requirements.txt
 
-      - run: echo `python hello.py`
+      - name: run-python-script
+        run: python hello.py
 
       - run: echo "Next step"
 
